--- a/monthly-reports.yml
+++ b/monthly-reports.yml
@@ -24,8 +24,8 @@ jobs:
       matrix:
         ccd-data-store-api-postgres-db-v11-prod-ccd_data_store-monthly-claimants:
           QUERY: ./scripts/monthly/ccd-data-store-api-postgres-db-v11-prod-ccd_data_store-monthly-claimants.sh
-          TO_ADDRESS: 'alliu.balogun@hmcts.net'
-          CC_ADDRESS: 'mohana.yalamanchi@HMCTS.NET'
+          TO_ADDRESS: 'contactocmc@justice.gov.uk'
+          CC_ADDRESS: 'alliu.balogun@HMCTS.NET'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v11-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@ccd-data-store-api-postgres-db-v11-prod"
