--- a/weekly-reports.yml
+++ b/weekly-reports.yml
@@ -62,7 +62,7 @@ jobs:
         cft-task-postgres-db-prod-cft_task_tasks-weekly-createdtasks:
           QUERY: ./scripts/weekly/cft-task-postgres-db-prod-cft_task_tasks-weekly-createdtasks.sh
           TO_ADDRESS: 'alliu.balogun@justice.gov.uk'
-          CC_ADDRESS: 'Mohammed.Ali@HMCTS.NET Samson.Oyebade@HMCTS.NET brian.mccann@HMCTS.NET'
+          CC_ADDRESS: 'Samson.Oyebade@HMCTS.NET brian.mccann@HMCTS.NET khaled.siddat@justice.gov.uk Mohammed.Ali@HMCTS.NET '
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@cft-task-postgres-db-prod"
           AZURE_HOSTNAME: 'cft-task-postgres-db-prod.postgres.database.azure.com'
           AZURE_DB: 'cft_task_db'
