--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -109,7 +109,7 @@ jobs:
         ccd-data-store-api-postgres-db-v11-prod-ccd_data_store-daily-grantsissuedyesterdayextract:
           QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v11-prod-ccd_data_store-daily-grantsissuedyesterdayextract.sh
           TO_ADDRESS: 'Kevin.bunn@justice.gov.uk'
-          CC_ADDRESS: 'alliu.balogun@hmcts.net Alison.ljones@justice.gov.uk Robert.walker3@justice.gov.uk probatefeedback@justice.gov.uk'
+          CC_ADDRESS: 'Alison.ljones@justice.gov.uk Robert.walker3@justice.gov.uk probatefeedback@justice.gov.uk'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v11-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@ccd-data-store-api-postgres-db-v11-prod"
@@ -124,16 +124,16 @@ jobs:
           SUBJECT: 'Stops-applied-to-Grants Daily Report'
         ccd-data-store-api-postgres-db-v11-prod-ccd_data_store-daily-Welshlanguagedivorceissued:
           QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v11-prod-ccd_data_store-daily-Welshlanguagedivorceissued.sh
-          TO_ADDRESS: 'steven.silverwood@justice.gov.uk'
-          CC_ADDRESS: 'alliu.balogun@hmcts.net Isabel.syred@justice.gov.uk'
+          TO_ADDRESS: 'Kate.Pearce@justice.gov.uk'
+          CC_ADDRESS: 'Isabel.syred@justice.gov.uk'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v11-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@ccd-data-store-api-postgres-db-v11-prod"
           SUBJECT: 'Welsh-Language-Divorce-Issued Daily Report'
         ccd-data-store-api-postgres-db-v11-prod-ccd_data_store-daily-Welshlanguageissued:
           QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v11-prod-ccd_data_store-daily-Welshlanguageissued.sh
-          TO_ADDRESS: 'steven.silverwood@justice.gov.uk'
-          CC_ADDRESS: 'alliu.balogun@hmcts.net helen.smith6@justice.gov.uk Rosie.Clarke@HMCTS.NET'
+          TO_ADDRESS: 'Kate.Pearce@justice.gov.uk'
+          CC_ADDRESS: 'helen.smith6@justice.gov.uk Rosie.Clarke@HMCTS.NET'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v11-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@ccd-data-store-api-postgres-db-v11-prod"
