--- a/weekly-reports.yml
+++ b/weekly-reports.yml
@@ -299,3 +299,32 @@ jobs:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
           STORAGE_KEY: $(timdaexedata-storageaccount)
           CONTAINER_NAME: 'weeklies'
+
+  - job: IAC_PET_queries
+    timeoutInMinutes: 180
+    pool:
+      name: 'hmcts-ss-prod'
+    steps:
+      - task: AzureCLI@1
+        displayName: 'Get access token'
+        name: gettoken
+        inputs:
+          azureSubscription: $(serviceConnection)
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            #!/bin/bash
+            set -ex
+            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
+            echo $output
+            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
+      - task: AzureKeyVault@1
+        inputs:
+          azureSubscription: $(serviceConnection)
+          KeyVaultName: 'sendgridprod'
+          SecretsFilter: 'hmcts-db-reporting-api-key'
+          RunAsPreJob: false
+      - task: Bash@4
+        inputs:
+          filePath: './scripts/weekly-report-3144/run-all.sh'
+        env:
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
