--- a/weekly-reports.yml
+++ b/weekly-reports.yml
@@ -299,7 +299,6 @@ jobs:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
           STORAGE_KEY: $(timdaexedata-storageaccount)
           CONTAINER_NAME: 'weeklies'
-
   - job: IAC_PET_queries
     timeoutInMinutes: 180
     pool:
@@ -325,6 +324,8 @@ jobs:
           RunAsPreJob: false
       - task: Bash@4
         inputs:
-          filePath: './scripts/weekly-report-3144/run-all.sh'
+          filePath: './scripts/weekly/RIA-6824-cases-moved-to-decided-state/run-all.sh'
         env:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
+          AZURE_HOSTNAME: ccd-data-store-api-postgres-db-v11-prod.postgres.database.azure.com
+          AZURE_DB_USERNAME: DTS\ CFT\ DB\ Access\ Reader@ccd-data-store-api-postgres-db-v11-prod
