--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -133,7 +133,7 @@ jobs:
         ccd-data-store-api-postgres-db-v11-prod-ccd_data_store-daily-Welshlanguageissued:
           QUERY: ./scripts/daily/ccd-data-store-api-postgres-db-v11-prod-ccd_data_store-daily-Welshlanguageissued.sh
           TO_ADDRESS: 'Kate.Pearce@justice.gov.uk'
-          CC_ADDRESS: 'helen.smith6@justice.gov.uk Rosie.Clarke@HMCTS.NET'
+          CC_ADDRESS: 'helen.smith6@justice.gov.uk'
           AZURE_HOSTNAME: 'ccd-data-store-api-postgres-db-v11-prod.postgres.database.azure.com'
           AZURE_DB: 'ccd_data_store'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@ccd-data-store-api-postgres-db-v11-prod"
