--- a/weekly-reports.yml
+++ b/weekly-reports.yml
@@ -70,7 +70,7 @@ jobs:
         cft-task-postgres-db-prod-cft_task_tasks-weekly-createdtasks:
           QUERY: ./scripts/weekly/cft-task-postgres-db-prod-cft_task_tasks-weekly-createdtasks.sh
           TO_ADDRESS: 'charlotte.beveridge@hmcts.net'
-          CC_ADDRESS: 'jen.bottrill@hmcts.net'
+          CC_ADDRESS: 'Giorgio.Finella@hmcts.net'
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC"
           AZURE_HOSTNAME: 'cft-task-postgres-db-flexible-prod.postgres.database.azure.com'
           AZURE_DB: 'cft_task_db'
