--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -44,6 +44,34 @@ jobs:
         env:
           SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
 
+  - job: rd_elinks_judicial
+    pool:
+      name: 'hmcts-ss-prod'
+    steps:
+      - task: AzureCLI@1
+        displayName: 'Get access token'
+        name: gettoken
+        inputs:
+          azureSubscription: $(serviceConnection)
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            #!/bin/bash
+            set -ex
+            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
+            echo $output
+            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
+      - task: AzureKeyVault@1
+        inputs:
+          azureSubscription: $(serviceConnection)
+          KeyVaultName: 'sendgridprod'
+          SecretsFilter: 'hmcts-db-reporting-api-key'
+          RunAsPreJob: false
+      - task: Bash@3
+        inputs:
+          filePath: './scripts/daily/rd-judicial-api-postgres-db-prod-elink-dbjudicialdata-daily-rowcount.sh'
+        env:
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
+
   - job: rd_locationgit
     pool:
       name: 'hmcts-ss-prod'
