--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -20,11 +20,12 @@ jobs:
     pool:
       name: 'hmcts-ss-prod'
     steps:
-      - task: AzureCLI@1
+      - task: AzureCLI@2
         displayName: 'Get access token'
         name: gettoken
         inputs:
           azureSubscription: $(serviceConnection)
+          scriptType: bash
           scriptLocation: 'inlineScript'
           inlineScript: |
             #!/bin/bash
@@ -32,7 +33,7 @@ jobs:
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             echo $output
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@1
+      - task: AzureKeyVault@2
         inputs:
           azureSubscription: $(serviceConnection)
           KeyVaultName: 'sendgridprod'
@@ -48,11 +49,12 @@ jobs:
     pool:
       name: 'hmcts-ss-prod'
     steps:
-      - task: AzureCLI@1
+      - task: AzureCLI@2
         displayName: 'Get access token'
         name: gettoken
         inputs:
           azureSubscription: $(serviceConnection)
+          scriptType: bash
           scriptLocation: 'inlineScript'
           inlineScript: |
             #!/bin/bash
@@ -60,7 +62,7 @@ jobs:
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             echo $output
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@1
+      - task: AzureKeyVault@2
         inputs:
           azureSubscription: $(serviceConnection)
           KeyVaultName: 'sendgridprod'
@@ -76,11 +78,12 @@ jobs:
     pool:
       name: 'hmcts-ss-prod'
     steps:
-      - task: AzureCLI@1
+      - task: AzureCLI@2
         displayName: 'Get access token'
         name: gettoken
         inputs:
           azureSubscription: $(serviceConnection)
+          scriptType: bash
           scriptLocation: 'inlineScript'
           inlineScript: |
             #!/bin/bash
@@ -88,7 +91,7 @@ jobs:
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             echo $output
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@1
+      - task: AzureKeyVault@2
         inputs:
           azureSubscription: $(serviceConnection)
           KeyVaultName: 'sendgridprod'
@@ -104,11 +107,12 @@ jobs:
     pool:
       name: 'hmcts-ss-prod'
     steps:
-      - task: AzureCLI@1
+      - task: AzureCLI@2
         displayName: 'Get access token'
         name: gettoken
         inputs:
           azureSubscription: $(serviceConnection)
+          scriptType: bash
           scriptLocation: 'inlineScript'
           inlineScript: |
             #!/bin/bash
@@ -116,7 +120,7 @@ jobs:
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             echo $output
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@1
+      - task: AzureKeyVault@2
         inputs:
           azureSubscription: $(serviceConnection)
           KeyVaultName: 'sendgridprod'
@@ -167,11 +171,12 @@ jobs:
           AZURE_DB_USERNAME: "DTS\ Platform\ Operations\ SC@ccd-data-store-api-postgres-db-v11-prod"
           SUBJECT: 'Welsh-Language-SSCS-Issued Daily Report'
     steps:
-      - task: AzureCLI@1
+      - task: AzureCLI@2
         displayName: 'Get access token'
         name: gettoken
         inputs:
           azureSubscription: $(serviceConnection)
+          scriptType: bash
           scriptLocation: 'inlineScript'
           inlineScript: |
             #!/bin/bash
@@ -179,13 +184,13 @@ jobs:
             output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
             echo $output
             echo "##vso[task.setvariable variable=PGPASSWORD]$output"
-      - task: AzureKeyVault@1
+      - task: AzureKeyVault@2
         inputs:
           azureSubscription: $(serviceConnection)
           KeyVaultName: 'sendgridprod'
           SecretsFilter: 'hmcts-db-reporting-api-key'
           RunAsPreJob: false
-      - task: AzureKeyVault@1
+      - task: AzureKeyVault@2
         inputs:
           azureSubscription: $(serviceConnection)
           KeyVaultName: 'ccd-prod'
