Revert "Fix  yaml"
This reverts commit 8ac411a5852fefe551b661aba7b45c459d51af2e.

--- a/weekly-reports.yml
+++ b/weekly-reports.yml
@@ -20,7 +20,9 @@ jobs:
     timeoutInMinutes: 180
     pool:
       name: 'hmcts-ss-prod'
-    steps:
+    strategy:
+      maxParallel: 1
+      matrix:
       - task: Bash@3
         inputs:
           filePath: 'email_report.sh'
